--- a/src/app/espace-client/espace-client.component.html
+++ b/src/app/espace-client/espace-client.component.html
@@ -4,26 +4,7 @@
   <app-navbar></app-navbar>
 
     
-    <header class="masthead text-white ">
-        <div class="overlay"></div>
-        <div class="container slider-top-text">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <h3 class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
-                    <H4 class="myp-slider text-center">Faites confiance à l’une de nos équipes dynamiques, professionnelles et pleines d’énergie!
-                    </H4>
-                    <p class="myp text-center">Services Entreprise    |   Service Domicile    |   Service Organisation </p>
-                    <a class="btn btn-primary btn-join" href="#">Joingnez notre communauté</a>
-
-                </div>
-                <div class="col-md-12 text-center mt-5">
-                    <div class="scroll-down">
-                        <a class="btn btn-default btn-scroll floating-arrow" href="#gobottom" id="bottom"><i class="fa fa-angle-down"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    <app-head-client></app-head-client>
     <!-- espace Section1 -->    
 
         <!-- espace Section2 -->    
@@ -34,11 +15,12 @@
         <!-- espace Section3 -->    
 
             <!-- espace Section4 -->  
-            <div class="col-md-12 text-center">
-                <app-section-acceuil></app-section-acceuil>
+              <app-section-acceuil></app-section-acceuil>
 
-            <br/><br/>
-            </div><br/><br/>
+            <div >
+            <app-section2></app-section2>
+            </div>
+            
 
 
    
