--- a/src/app/head-client/head-client.component.html
+++ b/src/app/head-client/head-client.component.html
@@ -1,3 +1,20 @@
-<p>
-  head-client works!
-</p>
+<header class="masthead text-white ">
+    <div class="overlay"></div>
+    <div class="container slider-top-text">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
+                <H4 class="myp-slider text-center">Faites confiance à l’une de nos équipes dynamiques, professionnelles et pleines d’énergie!
+                </H4>
+                <p class="myp text-center">Services Entreprise    |   Service Domicile    |   Service Organisation </p>
+                <a class="btn btn-primary btn-join" [routerLink]="['/contacter']" routerLinkActive="active" ><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
+                  "></span></h4></a>
+            </div>
+            <div class="col-md-12 text-center mt-5">
+                <div class="scroll-down">
+                    <a class="btn btn-default btn-scroll floating-arrow" href="#gobottom" id="bottom"><i class="fa fa-angle-down"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
