--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,10 +8,10 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 <body>
  
-  <app-navbar></app-navbar>
-
+<!--   <app-navbar></app-navbar>
+ -->
     
-    <app-homed></app-homed>
+ <app-homed></app-homed>
 
 <!-- section1 -->
 <app-section1></app-section1>
