--- a/src/app/homed/homed.component.html
+++ b/src/app/homed/homed.component.html
@@ -9,16 +9,16 @@
  
   <app-navbar></app-navbar>
 
-    
+    <app-carousel></app-carousel>
     <header class="masthead text-white ">
         <div class="overlay"></div>
         <div class="container slider-top-text">
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center" style=" opacity:.4">
                     <h3 class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
                     <h4 class="myp-slider text-center">Nous vous proposons des Services de qualités</h4>
                     <p class="myp text-center">Services Entreprises    |   Service Menageres    |   Service d'Organisations </p>
-                    <a class="btn btn-primary btn-join" href="#"><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
+                    <a class="btn btn-primary btn-join" [routerLink]="['/contacter']" routerLinkActive="active" ><h4>Contacter Nous<span class="glyphicon glyphicon-chevron-right
                       "></span></h4></a>
 
                 </div>
