--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -763,3 +763,26 @@ p.myp-font {
 	.header-wrap .sub-menu {width: 250px;}
 	.box img {height: 100%;}
 }
+
+
+//////////ajout
+a#bg-main {
+    color: #008ba3;
+    font-size: 17px;
+
+}
+
+
+
+/* #page
+{
+    margin-left: 50%;
+
+} */
+
+
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(212, 147, 218) ;
+  }
+  
