--- a/src/app/section1/section1.component.html
+++ b/src/app/section1/section1.component.html
@@ -1,4 +1,4 @@
-<section class="testimonials" id="gobottom">
+<section class="testimonials  " id="gobottom"  >
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-3 wow bounceInUp" data-wow-duration="1.4s">
@@ -22,7 +22,7 @@
                         <div class="linear-grid">
                             <div class="row">
                                 <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s" >
-                                    <img src="../assets/SET1/images (3).jpg" class="img-thumbnail">
+                                    <img src="../assets/SET1/43.jpg" class="img-thumbnail">
                                 </div>
                                 <div class=" col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
                                     <img  src="../assets/SET1/babies.jpg" class="img-thumbnail">
@@ -42,10 +42,10 @@
                                         <img src="../assets/SET1/img.jpg" class="img-thumbnail">
                                     </div>
                                     <div class=" col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                        <img  src="../assets/SET1/babies.jpg" class="img-thumbnail">
+                                        <img  src="../assets/images/li2.jpg" class="img-thumbnail">
                                     </div>
                                     <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                        <img  src="../assets/SET1/mom.jpg" class="img-thumbnail">
+                                        <img  src="../assets/images/li.jpg" class="img-thumbnail">
                                     </div>
                                     <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
                                         <img  src="../assets/SET1/meer.jpg" class="img-thumbnail">
@@ -53,8 +53,6 @@
                                 </div>
                             </div>
                             
-
-                           
                         </div>
                     </div>
                    
@@ -63,5 +61,4 @@
         </div>
     </div>
 </section>
-
 
