--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,3 +1,4 @@
+<div class="bg-dark">
 <form [formGroup]="clientForm" (ngSubmit)="submithandle()">
   <div class="col-md-4 mb-3">
         <label for="nom">Nom</label>
@@ -85,6 +86,7 @@
 
 
 </form>
+</div>
 
 
 
