--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,21 +1,23 @@
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-offset-5 col-md-3">
-            <div class="form-login">
-            <h4>Sen Menageres</h4>
-            <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username" />
-            <br/>
-            <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password" />
-            <br/>
-            <div class="wrapper">
-            <span class="group-btn">     
-                <a href="#" class="btn btn-primary btn-md">login <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-in"></i></a>
-            </span>
+    <form name="auth">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-5 col-md-3">
+                    <div class="form-login">
+                    <h4>Sen Menageres</h4>
+                    <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username" />
+                    <br/>
+                    <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password" />
+                    <br/>
+                    <div class="wrapper">
+                    <span class="group-btn">     
+                        <a href="#" class="btn btn-primary btn-md">login <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-in"></i></a>
+                    </span>
+                    </div>
+                    </div>
+                
+                </div>
             </div>
-            </div>
-        
         </div>
-    </div>
-</div>
+    </form>
 </body>
