--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -72,6 +72,7 @@
            <div class="form-group input-group-sm">
               <label for="pay">Nationalité:</label>
               <select id="pay" class="form-control"  formControlName="pay" >
+                  <option selected >Sénégal</option>
                   <option  *ngFor="let nom of paysliste" value="{{nom}}">{{nom}}</option>
                   
               </select>
