--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,6 +17,8 @@
              <!-- 4eme -->
             <li class="nav-item"><a class="nav-link" [routerLink]="['/statistique']">Statististique<span class="glyphicon glyphicon-stats
               "></span></a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/employee/inscription']">inscription<span class="glyphicon glyphicon-stats
+                "></span></a></li>
     
     </ul><br>
     <div class="input-group">
