--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,12 +1,12 @@
 <div id="carousel" class="col-md-15">
     <div id="slider"  class="col-md-15">
         <figure>
-        <p><img src="/../assets/REDIM/R1.jpg" alt="feu d’artifice à Austin"><br>
-          <img src="../assets/REDIM/R2.jpg" alt="le mausolée du taj-mahal"><br>
-          <img src="../assets/REDIM/R3.jpg" alt="le mausolée du taj-mahal"><br>
-        <img src="../assets/REDIM/R4.jpg" alt="coucher de soleil à Ibiza"><br>
-        <img src="../assets/REDIM/R5.jpg" alt="coucher de soleil sur un temple à Angkhor"><br>
-        <img src="../assets/REDIM/R1.jpg" alt="feu d’artifice à Austin"></p>
+        <p><img src="/../assets/caro/I5.jpg" alt="feu d’artifice à Austin"><br>
+          <img src="../assets/caro/I3.jpg" alt="le mausolée du taj-mahal"><br>
+          <img src="../assets/caro/I4.jpg" alt="le mausolée du taj-mahal"><br>
+        <img src="../assets/caro/I3.jpg" alt="coucher de soleil à Ibiza"><br>
+        <img src="../assets/caro/I12.jpg" alt="coucher de soleil sur un temple à Angkhor"><br>
+        <img src="../assets/caro/I5.jpg" alt="feu d’artifice à Austin"></p>
         </figure>
     </div>
 </div>
