--- a/src/app/nav1/nav1.component.html
+++ b/src/app/nav1/nav1.component.html
@@ -6,17 +6,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" >SeneMenagère</a>
+        <a class="navbar-brand" ><h5>SeneMenagère</h5></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a [routerLink]="['/']" routerLinkActive="router-link-active" >Acceuil</a></li>
-          <li><a  [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active" >Espace Client</a></li>
-          <li><a [routerLink]="['/contacter']" routerLinkActive="router-link-active" >Contact</a></li>
+          <li class="active"><a [routerLink]="['/']" routerLinkActive="router-link-active" ><h5>Acceuil</h5></a></li>
+          <li><a  [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active" ><h5>Espace Client</h5></a></li>
+          <li><a [routerLink]="['/contacter']" routerLinkActive="router-link-active" ><h5>Contact</h5></a></li>
          
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a [routerLink]="['/login']" routerLinkActive="router-link-active" ><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+          <li><a [routerLink]="['/login']" routerLinkActive="router-link-active" ><h5><span class="glyphicon glyphicon-log-in"></span> Connexion</h5></a></li>
         </ul>
       </div>
     </div>
