--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -5,37 +5,37 @@
     <div class="col-xs-6 col-md-4  Vcenter">
 
         <label for="nom">Nom</label>
-        <input type="text" class="form-control" id="nom" placeholder="Nom" formControlName="nom" required>
+        <input type="text" class="form-control activation" id="nom" placeholder="Nom" formControlName="nom" required >
          <div class="valid-tooltip"> 
         </div>
    </div>
    <div class="col-md-4 mb-3">
      <label for="telephoneFixe">Téléphne Fixe</label>
-      <input type="text" class="form-control" id="telephoneFixe" placeholder="telephoneFixe" formControlName="telephoneFixe" required>
+      <input type="text" class="form-control activation" id="telephoneFixe" placeholder="telephoneFixe" formControlName="telephoneFixe" required>
       <div class="valid-tooltip"></div>           
    </div>
    <div class="col-md-4 mb-3">
       <label for="localite">Localité</label>
-      <select id="localite" class="form-control" formControlName="localite" >
+      <select id="localite" class="form-control activation" formControlName="localite" >
           <option  *ngFor="let nom of localiteListe" value="{{nom}}">{{nom}}</option>
       </select>
       <div class="valid-tooltip"> </div>
    </div>
    <div class="col-md-4 mb-3">
       <label for="prenom">Prénom</label>
-      <input type="text" class="form-control" id="prenom" placeholder="prenom" formControlName="prenom" required>
+      <input type="text" class="form-control activation" id="prenom" placeholder="prenom" formControlName="prenom" required>
       <div class="valid-tooltip"> 
       </div>
    </div>
    <div class="col-md-4 mb-3">
      <label for="telephoneMobile">Téléphne Mobile</label>
-      <input type="text" class="form-control" id="telephoneMobile" placeholder="telephoneMobile" formControlName="telephoneMobile" required>
+      <input type="text" class="form-control activation" id="telephoneMobile" placeholder="telephoneMobile" formControlName="telephoneMobile" required>
       <div class="valid-tooltip"> 
       </div>
    </div>
    <div class="col-md-4 mb-3">
      <label for="typeidentification">Type Identification</label>
-     <select id="typeidentification" class="form-control"  formControlName="typeidentification"  placeholder="typeidentification">
+     <select id="typeidentification" class="form-control activation"  formControlName="typeidentification"  placeholder="typeidentification">
           <option  *ngFor="let nom of identificationListe" value="{{nom}}">{{nom}}</option>
      </select>
      <div class="valid-tooltip"> 
@@ -43,13 +43,13 @@
    </div>
   <div class="col-md-4 mb-3">
     <label for="adresse">Adresse</label>
-    <input type="text" class="form-control" id="adresse" placeholder="adresse" formControlName="adresse" required>
+    <input type="text" class="form-control activation" id="adresse" placeholder="adresse" formControlName="adresse" required>
     <div class="valid-tooltip"> 
     </div>
    </div>
   <div class="col-md-4 mb-3">
     <label for="sexe">Sexe</label>
-    <select id="Sexe" class="form-control" formControlName="sexe">
+    <select id="Sexe" class="form-control activation" formControlName="sexe">
        <option selected>Masculin</option>
       <option>Féminin</option>
     </select>
@@ -58,19 +58,19 @@
   </div>
   <div class="col-md-4 mb-3">
     <label for="identification">N° d'Identification</label>
-    <input type="text" class="form-control" id="identification" placeholder="identification" formControlName="identification" required>
+    <input type="text" class="form-control activation" id="identification" placeholder="identification" formControlName="identification" required>
     <div class="valid-tooltip"> 
     </div>
  </div>
  <div class="col-md-4 mb-3">
     <label for="email">Email</label>
-    <input type="text" class="form-control" id="email" placeholder="email" formControlName="email" required>
+    <input type="text" class="form-control activation" id="email" placeholder="email" formControlName="email" required>
     <div class="valid-tooltip"> 
     </div>
  </div>
  <div class="form-group col-md-4">
       <label for="pay">Pays</label>
-      <select id="pay" class="form-control"  formControlName="pay">
+      <select id="pay" class="form-control activation"  formControlName="pay">
           <option selected >Sénégal</option>
           <option  *ngFor="let nom of paysliste" value="{{nom}}">{{nom}}</option>
       </select>
@@ -79,15 +79,15 @@
  </div>
  <div class="col-md-4 mb-3">
       <label for="textarea">Observation </label>
-      <textarea class="form-control" id="observation" rows="5" maxlength="500" formControlName="observation"></textarea>
+      <textarea class="form-control activation" id="observation" rows="5" maxlength="500" formControlName="observation"></textarea>
       <div class="valid-tooltip"> 
       </div>
-      <button class="btn btn-lg btn-primary btn-block text-uppercase col-xs-6 col-md-2 col-lg-8 Vcenter"id="buttonenregistrer" type="submit">Suivant</button>
+      <button class="btn btn-lg btn-primary btn-block text-uppercase col-xs-6 col-md-2 col-lg-8 Vcenter"id="buttonenregistrer" (click)="visibiliteDiv($event)" *ngIf="!suivant">Suivant</button>
   </div>
 </div>
 </div>
  <!-- DEUXIEME DIV CONFIRMATION  -->
- <div id="parti2">
+ <div id="parti2" *ngIf="suivant" >
   <div>
       <div class="col-xs-6 col-md-8 col-lg-10 Vcenter">
     <!--<div class="col-md-4 mb-6" >-->
@@ -97,15 +97,15 @@
                   
                   <div >
                     <!--<label for="inputEmail"> Adresse Email</label>-->
-                    <input type="email" id="inputEmail" class="form-control" placeholder="adresse Email " required>
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Login" formControlName="adresseEmail" required>
                   </div>
                   <div >
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Mot de Passe" required>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Mot de Passe" formControlName="MotdePasse" required>
                    <!-- <label for="inputPassword">Mot de Passe</label>-->
                   </div>
                   
                   <div >
-                    <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Confirmer" required>
+                    <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Confirmer" formControlName="Confirmer" required>
                     <!--<label for="inputConfirmPassword">Confirmer</label>-->
                   </div>
                   <button id="Valider" class="btn btn-lg btn-primary btn-block text-uppercase col-xs-6 col-md-2 col-lg-4 Vcenter" type="submit">S'enregistrer</button>  
