Maj du component contact

--- a/src/app/conctact/conctact.component.html
+++ b/src/app/conctact/conctact.component.html
@@ -32,6 +32,7 @@
               <h4><span class="glyphicon glyphicon-phone"></span>Phone: +221 77 334 42 54</h4>
               <h4><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</h4>
             </div>
+            <form action="/action_page.php">
             <div class="col-md-12 bg-dark">
               <div class="row">
                 <div class="col-sm-6 form-group"><br>
@@ -40,6 +41,9 @@
                 <div class="col-sm-12 form-group">
                   <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
                 </div>
+                <div class="col-sm-12 form-group">
+                  <input class="form-control" id="phone" name="phone" placeholder="Phone" type="phone_number" required>
+                </div>
                    </div>
                       <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
                         <div class="row">
@@ -47,7 +51,7 @@
                               <button class="btn pull-right" type="submit">Send</button>
                             </div>
                        </div> 
-                   </div>
+                   </div></form>
               </div>
            </div>    
         </div>
