--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -5,13 +5,13 @@
     <div class="col-xs-6 col-md-4  Vcenter">
 
         <label for="nom">Nom</label>
-        <input type="text" class="form-control activation" id="nom" placeholder="Nom" formControlName="nom" ng-class="{'has-error': registerForm.$dirty && registerForm.Password.$invalid, 'has-success': registerForm.Password.$valid}">
+        <input type="text" class="form-control activation" id="nom" placeholder="Nom" formControlName="nom"  [ngClass]="{'form-control':true,'is-invalid':nom.invalid && nom.touched, 'is-valid':nom.valid && nom.touched}" >
          <div class="valid-tooltip"> 
         </div>
    </div>
    <div class="col-md-4 mb-3">
      <label for="telephoneFixe">Téléphne Fixe</label>
-      <input type="text" class="form-control activation" id="telephoneFixe" placeholder="telephoneFixe" formControlName="telephoneFixe" ng-class="{'has-error': registerForm.$dirty && registerForm.Password.$invalid, 'has-success': registerForm.Password.$valid}">
+      <input type="text" class="form-control activation" id="telephoneFixe" placeholder="telephoneFixe" formControlName="telephoneFixe" [ngClass]="{'has-error': clientForm.dirty && clientForm.telephoneFixe.invalid, 'has-success': clientForm.telephoneFixe.valid}">
       <div class="valid-tooltip"></div>           
    </div>
    <div class="col-md-4 mb-3">
