Maj du component contact client et carousel

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,14 +1,6 @@
 <div id="carousel" class="col-md-15">
     <div id="slider"  class="col-md-15">
         <figure>
-<<<<<<< HEAD
-        <p><img src="/../assets/caro/I5.jpg" alt="feu d’artifice à Austin"><br>
-          <img src="../assets/caro/I3.jpg" alt="le mausolée du taj-mahal"><br>
-          <img src="../assets/caro/I4.jpg" alt="le mausolée du taj-mahal"><br>
-        <img src="../assets/caro/I3.jpg" alt="coucher de soleil à Ibiza"><br>
-        <img src="../assets/caro/I12.jpg" alt="coucher de soleil sur un temple à Angkhor"><br>
-        <img src="../assets/caro/I5.jpg" alt="feu d’artifice à Austin"></p>
-=======
         <p><img src="/../assets/REDIM/R1.jpg" alt="feu d’artifice à Austin">
         </figure>
         <figure>
@@ -21,20 +13,19 @@
         <p><img src="../assets/REDIM/R4.jpg" alt="coucher de soleil à Ibiza">
         </figure>
         <figure>
-        <p><img src="../assets/REDIM/R5.jpg" alt="coucher de soleil sur un temple à Angkhor">
+        <p><img src="../assets/caro/MR3.jpg" alt="coucher de soleil sur un temple à Angkhor">
         </figure>
         <figure>
-        <p><img src="../assets/REDIM/R1.jpg" alt="feu d’artifice à Austin"></p>
-        </figure>
-        <figure>
-            <p><img src="../assets/caro/l7.jpg" alt="feu d’artifice à Austin"></p>
+        <p><img src="../assets/caro/R6.jpg" alt="feu d’artifice à Austin"></p>
         </figure>
         <figure>
             <p><img src="../assets/caro/R12.jpg" alt="feu d’artifice à Austin"></p>
         </figure>
         <figure>
                 <p><img src="../assets/caro/R15.jpg" alt="feu d’artifice à Austin"></p>
->>>>>>> 4fb08d3965adb6cd926af5570a48ac966855bfe0
         </figure>
+        <figure>
+            <p><img src="../assets/caro/l9.jpg" alt="feu d’artifice à Austin"></p>
+    </figure>
     </div>
 </div>
