--- a/src/app/conctact/conctact.component.html
+++ b/src/app/conctact/conctact.component.html
@@ -27,23 +27,23 @@
                                 <h4><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</h4>
                                 <br/>
                               </div>
-                              <form >
+                              <form [formGroup]="contactForm" (ngSubmit)="envoyerEmail()">
                               <div class="col-md-12 bg-dark">
                                <div class="row">
                                   <div class="col-sm-6 form-group"><br>
-                                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" formControlName="nom" required>
                                   </div>
                                   <div class="col-sm-12 form-group">
-                                    <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                                    <input class="form-control" id="email" name="email" placeholder="Email" type="email" formControlName="email" required>
                                   </div>
                                   <div class="col-sm-12 form-group">
-                                    <input class="form-control" id="phone" name="phone" placeholder="Phone" type="number" required>
+                                    <input class="form-control" id="phone" name="phone" placeholder="Phone" type="number" formControlName="numero" required>
                                   </div>
                                </div>
-                               <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+                               <textarea class="form-control" id="comments" name="comments" placeholder="Comment" formControlName="message" rows="5"></textarea>
                                <div class="row">
                                 <div class="col-md-12 form-group">
-                                   <button class="btn pull-right" type="submit">Send</button>
+                                   <button class="btn pull-right" type="submit" [disabled]="!contactForm.valid">Send</button>
                                </div>
                               </div> 
                            </div>
