--- a/src/app/section-acceuil/section-acceuil.component.html
+++ b/src/app/section-acceuil/section-acceuil.component.html
@@ -13,7 +13,7 @@
                     <div class="linear-grid">
                         <div class="row">
                             
-                            <app-client class="bg-dark"></app-client>
+                            <app-client></app-client>
 
                            
                         </div>
